2005-10-21  DJ Delorie  <dj@redhat.com>

	* config/tc-m32c.c (md_cgen_lookup_reloc): Add more relocs.  Print
	names unstead of numbers.

2005-10-19  David Ung  <davidu@mips.com>

	* config/tc-mips.c (append_insn): Convert MIPS16 jr/jalr jumps
	into jrc/jalrc versions if ISA_MIPS32+ and not doing the swap,
	hence avoiding to emit a nop.

2005-10-19  Jie Zhang  <jie.zhang@analog.com>

	* config/tc-bfin.c (md_begin): Let the lex_type of '(' be
	LEX_BEGIN_NAME.
	(bfin_start_line_hook): Remove the workaround for LSETUP(.
	(bfin_name_is_register): Remove the workarounds for LSETUP(
	and SAA(.
	(bfin_start_label): Ditto.

2005-10-18  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xtensa_end_directive): Restore
	default_lit_sections regardless of use_literal_section.

2005-10-18  Jie Zhang  <jie.zhang@analog.com>

	* Makefile.am (bfin-lex.c): Update ylwrap invocation.
	* Makefile.in: Regenerated.

2005-10-18  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* doc/as.texinfo (.loc) Fix placement of '@end table'.

2005-10-17  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa-istack.h (TInsn): Replace dwarf2_line_info with an
	unsigned line number.  Do not include "dwarf2dbg.h".
	* config/tc-xtensa.c (md_pseudo_table): Remove entry for "loc".
	(xtensa_dwarf2_directive_loc, xtensa_dwarf2_emit_insn): Delete.
	(xg_build_to_insn, xg_build_token_insn): Update TInsn uses.
	(md_assemble): Use as_where instead of dwarf2_where.
	(xg_assemble_vliw_tokens): Use unsigned line numbers instead of
	dwarf2_line_infos.  Change to call new_logical_line followed by
	dwarf2_emit_insn.

2005-10-14  Mike Frysinger <vapier@gentoo.org>

	* doc/as.texinfo (Section): Add missing ']' to .section example.

2005-10-12  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR binutils/941
	* config/tc-hppa.c (pa_ip): Use as_bad instead of as_fatal when an
	unknown opcode is found.

2005-10-12  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Mention @file.
